Updated README.rdoc to contain some install info

--- a/README.rdoc
+++ b/README.rdoc
@@ -4,3 +4,9 @@ This plugin allows the Exception Handler Library or any other client application
 
 When a new report is received, this plugin will automatically search for an existing report.
 If there is an existing report, it will be updated; if not, a new report will be filed.
+
+= Installation
+
+clone into your plugin folder rake yourt database with the following command:
+
+rake db:migrate_plugins RAILS_ENV=production
